[package]
name = "dassembly"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.9", features = ["macros"] }
paste = "1.0.5"
num-traits = "0.2"
num-derive = "0.3"
futures = "0.3.16"
tokio = { version = "1.13.1", features = ["full"] }